added mocked API for kyc4(Quiz)
